# Magma

./: .gitignore  1qa  2  CMakeLists.txt  Makefile  VulkanTest  imgui.ini  keyboard_movement_controller.hpp  magma.cpp  magma.hpp  magma_buffer.cpp  magma_buffer.hpp  magma_camera.cpp  magma_camera.hpp  magma_descriptors.cpp  magma_device.cpp  magma_device.hpp  magma_frame_info.hpp  magma_game_object.cpp  magma_game_object.hpp  magma_model.cpp  magma_model.hpp  magma_pipeline.cpp  magma_pipeline.hpp  magma_renderer.cpp  magma_renderer.hpp  magma_swap_chain.cpp  magma_swap_chain.hpp  magma_utils.hpp  magma_window.cpp  magma_window.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp  structure.txt
shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: buffer_block.hpp  collision.cpp  collision.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  magma.cpp  magma.hpp  main.cpp  movement_controller.cpp  movement_controller.hpp  ui_manager.cpp  ui_manager.hpp
src/components/: component.hpp  transform.cpp  transform.hpp
src/core/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  core.ixx  deletion_queue.cpp  deletion_queue.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.cpp  frame_info.hpp  game_object.cpp  game_object.hpp  icons.cpp  icons.hpp  image_transitions.cpp  image_transitions.hpp  magma_buffer.cpp  magma_descriptors.hpp  magma_device.cpp  magma_device.hpp  magma_game_object.hpp  magma_model.cpp  magma_pipeline.cpp  magma_window.cpp  mesh.cpp  mesh.hpp  mesh_data.cpp  mesh_data.hpp  model.cpp  model.hpp  object_data.hpp  occlusion_culler.cpp  occlusion_culler.hpp  pipeline.cpp  pipeline.hpp  pipeline_shader_info.cpp  push_constant_data.cpp  (+28 more)
src/core/render/: magma_renderer.cpp  magma_renderer.hpp  simple_render_system.cpp  simple_render_system.hpp
src/engine/: camera.cpp  camera.hpp  editor_camera.cpp  editor_camera.hpp  engine.cpp  engine.hpp  engine.ixx  gameobject.cpp  gameobject.hpp  magma_config.hpp  project.cpp  project.hpp  project_creator.cpp  project_creator.hpp  render_system.cpp  scene.cpp  scene.hpp  scene_action.cpp  scene_action.hpp  scene_manager.cpp  scene_manager.hpp  specifications.cpp  specifications.hpp  time.cpp  time.hpp  ui.cpp  ui.hpp  ui_manager.cpp
src/engine/components/: camera.cpp  camera.hpp  component.cpp  component.hpp  components.ixx  mesh.cpp  mesh.hpp  point_light.cpp  point_light.hpp  render_callback.cpp  transform.cpp  transform.hpp
src/engine/render/: imgui_renderer.cpp  imgui_renderer.hpp  offscreen_renderer.cpp  offscreen_renderer.hpp  offscreen_target.cpp  offscreen_target.hpp  pipeline_shader_info.cpp  pipeline_shader_info.hpp  render.ixx  render_callback.hpp  render_context.cpp  render_context.hpp  render_proxy.cpp  scene_renderer.cpp  scene_renderer.hpp  swapchain_target.cpp  swapchain_target.hpp  viewport.hpp
src/engine/render/features/: features.ixx  object_picker.cpp  object_picker.hpp  render_feature.cpp  render_feature.hpp
src/engine/systems/: file_manager.cpp  file_manager.hpp  project_creator.cpp  systems.ixx
src/engine/widgets/: dock_layout.cpp  dock_layout.hpp  file_browser.cpp  file_browser.hpp  file_manager.cpp  file_manager.hpp  game_editor.cpp  game_editor.hpp  game_view.cpp  game_view.hpp  inspector.cpp  inspector.hpp  inspector_menu.cpp  inspector_menu.hpp  offscreen_view.cpp  offscreen_view.hpp  runtime_control.cpp  runtime_control.hpp  scene_menu.cpp  scene_menu.hpp  scene_tree.cpp  scene_tree.hpp  ui_context.cpp  ui_context.hpp  widget.cpp  widget.hpp  widget_manager.cpp  widgets.ixx  wiget_manger.cpp  wiget_manger.hpp
src/include/: tiny_gltf.h
src/shaders/: compile.sh  editor.frag  editor.vert  imgui.frag  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  simple_shader.vert.spv
